my-eks-blueprints/cdk.out/cluster-stack.template.json
{
 "Description": "Blueprints tracking (qs-1s1r465hk)",
 "Resources": {
  "clusterstackvpc22076887": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/Resource"
   }
  },
  "clusterstackvpcPublicSubnet1Subnet4B1CC129": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "clusterstackvpc22076887"
    },
    "AvailabilityZone": "ap-southeast-2a",
    "CidrBlock": "10.0.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet1/Subnet"
   }
  },
  "clusterstackvpcPublicSubnet1RouteTableD3112B13": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "clusterstackvpc22076887"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet1/RouteTable"
   }
  },
  "clusterstackvpcPublicSubnet1RouteTableAssociation5EF738C2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "clusterstackvpcPublicSubnet1RouteTableD3112B13"
    },
    "SubnetId": {
     "Ref": "clusterstackvpcPublicSubnet1Subnet4B1CC129"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "clusterstackvpcPublicSubnet1DefaultRoute16FC4439": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "clusterstackvpcPublicSubnet1RouteTableD3112B13"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "clusterstackvpcIGWB2AA0E16"
    }
   },
   "DependsOn": [
    "clusterstackvpcVPCGW7A23A202"
   ],
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "clusterstackvpcPublicSubnet1EIP9A09AE3D": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet1/EIP"
   }
  },
  "clusterstackvpcPublicSubnet1NATGatewayDC932769": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "clusterstackvpcPublicSubnet1Subnet4B1CC129"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "clusterstackvpcPublicSubnet1EIP9A09AE3D",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet1/NATGateway"
   }
  },
  "clusterstackvpcPublicSubnet2SubnetB75A7C8D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "clusterstackvpc22076887"
    },
    "AvailabilityZone": "ap-southeast-2b",
    "CidrBlock": "10.0.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet2/Subnet"
   }
  },
  "clusterstackvpcPublicSubnet2RouteTable361B1861": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "clusterstackvpc22076887"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet2/RouteTable"
   }
  },
  "clusterstackvpcPublicSubnet2RouteTableAssociation266D7F35": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "clusterstackvpcPublicSubnet2RouteTable361B1861"
    },
    "SubnetId": {
     "Ref": "clusterstackvpcPublicSubnet2SubnetB75A7C8D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "clusterstackvpcPublicSubnet2DefaultRoute5B58713A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "clusterstackvpcPublicSubnet2RouteTable361B1861"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "clusterstackvpcIGWB2AA0E16"
    }
   },
   "DependsOn": [
    "clusterstackvpcVPCGW7A23A202"
   ],
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "clusterstackvpcPublicSubnet2EIP65683885": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet2/EIP"
   }
  },
  "clusterstackvpcPublicSubnet2NATGateway0FFA7270": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "clusterstackvpcPublicSubnet2SubnetB75A7C8D"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "clusterstackvpcPublicSubnet2EIP65683885",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet2/NATGateway"
   }
  },
  "clusterstackvpcPublicSubnet3Subnet8F95B8A2": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "clusterstackvpc22076887"
    },
    "AvailabilityZone": "ap-southeast-2c",
    "CidrBlock": "10.0.64.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet3/Subnet"
   }
  },
  "clusterstackvpcPublicSubnet3RouteTable1A69B79A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "clusterstackvpc22076887"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet3/RouteTable"
   }
  },
  "clusterstackvpcPublicSubnet3RouteTableAssociation1CE84EA3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "clusterstackvpcPublicSubnet3RouteTable1A69B79A"
    },
    "SubnetId": {
     "Ref": "clusterstackvpcPublicSubnet3Subnet8F95B8A2"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet3/RouteTableAssociation"
   }
  },
  "clusterstackvpcPublicSubnet3DefaultRoute5B7E0364": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "clusterstackvpcPublicSubnet3RouteTable1A69B79A"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "clusterstackvpcIGWB2AA0E16"
    }
   },
   "DependsOn": [
    "clusterstackvpcVPCGW7A23A202"
   ],
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet3/DefaultRoute"
   }
  },
  "clusterstackvpcPublicSubnet3EIP1C047E66": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet3/EIP"
   }
  },
  "clusterstackvpcPublicSubnet3NATGateway6ADB8161": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "clusterstackvpcPublicSubnet3Subnet8F95B8A2"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "clusterstackvpcPublicSubnet3EIP1C047E66",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PublicSubnet3/NATGateway"
   }
  },
  "clusterstackvpcPrivateSubnet1Subnet3C679C32": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "clusterstackvpc22076887"
    },
    "AvailabilityZone": "ap-southeast-2a",
    "CidrBlock": "10.0.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PrivateSubnet1/Subnet"
   }
  },
  "clusterstackvpcPrivateSubnet1RouteTableB17DE48F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "clusterstackvpc22076887"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PrivateSubnet1/RouteTable"
   }
  },
  "clusterstackvpcPrivateSubnet1RouteTableAssociationC6295C54": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "clusterstackvpcPrivateSubnet1RouteTableB17DE48F"
    },
    "SubnetId": {
     "Ref": "clusterstackvpcPrivateSubnet1Subnet3C679C32"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "clusterstackvpcPrivateSubnet1DefaultRoute3ECBFEE2": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "clusterstackvpcPrivateSubnet1RouteTableB17DE48F"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "clusterstackvpcPublicSubnet1NATGatewayDC932769"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "clusterstackvpcPrivateSubnet2SubnetA4138772": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "clusterstackvpc22076887"
    },
    "AvailabilityZone": "ap-southeast-2b",
    "CidrBlock": "10.0.128.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PrivateSubnet2/Subnet"
   }
  },
  "clusterstackvpcPrivateSubnet2RouteTableF96BE109": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "clusterstackvpc22076887"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PrivateSubnet2/RouteTable"
   }
  },
  "clusterstackvpcPrivateSubnet2RouteTableAssociationCC2207EF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "clusterstackvpcPrivateSubnet2RouteTableF96BE109"
    },
    "SubnetId": {
     "Ref": "clusterstackvpcPrivateSubnet2SubnetA4138772"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "clusterstackvpcPrivateSubnet2DefaultRoute2C3B9F2E": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "clusterstackvpcPrivateSubnet2RouteTableF96BE109"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "clusterstackvpcPublicSubnet2NATGateway0FFA7270"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "clusterstackvpcPrivateSubnet3SubnetEA4F4415": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "clusterstackvpc22076887"
    },
    "AvailabilityZone": "ap-southeast-2c",
    "CidrBlock": "10.0.160.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PrivateSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PrivateSubnet3/Subnet"
   }
  },
  "clusterstackvpcPrivateSubnet3RouteTable2AD77C21": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "clusterstackvpc22076887"
    },
    "Tags": [
     {
      "Key": "kubernetes.io/role/internal-elb",
      "Value": "1"
     },
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc/PrivateSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PrivateSubnet3/RouteTable"
   }
  },
  "clusterstackvpcPrivateSubnet3RouteTableAssociation480A1533": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "clusterstackvpcPrivateSubnet3RouteTable2AD77C21"
    },
    "SubnetId": {
     "Ref": "clusterstackvpcPrivateSubnet3SubnetEA4F4415"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PrivateSubnet3/RouteTableAssociation"
   }
  },
  "clusterstackvpcPrivateSubnet3DefaultRouteC9D10118": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "clusterstackvpcPrivateSubnet3RouteTable2AD77C21"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "clusterstackvpcPublicSubnet3NATGateway6ADB8161"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/PrivateSubnet3/DefaultRoute"
   }
  },
  "clusterstackvpcIGWB2AA0E16": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "cluster-stack/cluster-stack-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/IGW"
   }
  },
  "clusterstackvpcVPCGW7A23A202": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "clusterstackvpc22076887"
    },
    "InternetGatewayId": {
     "Ref": "clusterstackvpcIGWB2AA0E16"
    }
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack-vpc/VPCGW"
   }
  },
  "clusterstackRole73A18A5D": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "eks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSClusterPolicy"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "clusterstackvpcIGWB2AA0E16",
    "clusterstackvpcPrivateSubnet1DefaultRoute3ECBFEE2",
    "clusterstackvpcPrivateSubnet1RouteTableB17DE48F",
    "clusterstackvpcPrivateSubnet1RouteTableAssociationC6295C54",
    "clusterstackvpcPrivateSubnet1Subnet3C679C32",
    "clusterstackvpcPrivateSubnet2DefaultRoute2C3B9F2E",
    "clusterstackvpcPrivateSubnet2RouteTableF96BE109",
    "clusterstackvpcPrivateSubnet2RouteTableAssociationCC2207EF",
    "clusterstackvpcPrivateSubnet2SubnetA4138772",
    "clusterstackvpcPrivateSubnet3DefaultRouteC9D10118",
    "clusterstackvpcPrivateSubnet3RouteTable2AD77C21",
    "clusterstackvpcPrivateSubnet3RouteTableAssociation480A1533",
    "clusterstackvpcPrivateSubnet3SubnetEA4F4415",
    "clusterstackvpcPublicSubnet1DefaultRoute16FC4439",
    "clusterstackvpcPublicSubnet1EIP9A09AE3D",
    "clusterstackvpcPublicSubnet1NATGatewayDC932769",
    "clusterstackvpcPublicSubnet1RouteTableD3112B13",
    "clusterstackvpcPublicSubnet1RouteTableAssociation5EF738C2",
    "clusterstackvpcPublicSubnet1Subnet4B1CC129",
    "clusterstackvpcPublicSubnet2DefaultRoute5B58713A",
    "clusterstackvpcPublicSubnet2EIP65683885",
    "clusterstackvpcPublicSubnet2NATGateway0FFA7270",
    "clusterstackvpcPublicSubnet2RouteTable361B1861",
    "clusterstackvpcPublicSubnet2RouteTableAssociation266D7F35",
    "clusterstackvpcPublicSubnet2SubnetB75A7C8D",
    "clusterstackvpcPublicSubnet3DefaultRoute5B7E0364",
    "clusterstackvpcPublicSubnet3EIP1C047E66",
    "clusterstackvpcPublicSubnet3NATGateway6ADB8161",
    "clusterstackvpcPublicSubnet3RouteTable1A69B79A",
    "clusterstackvpcPublicSubnet3RouteTableAssociation1CE84EA3",
    "clusterstackvpcPublicSubnet3Subnet8F95B8A2",
    "clusterstackvpc22076887",
    "clusterstackvpcVPCGW7A23A202"
   ],
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack/Role/Resource"
   }
  },
  "clusterstackControlPlaneSecurityGroup64B81F44": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "EKS Control Plane Security Group",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "clusterstackvpc22076887"
    }
   },
   "DependsOn": [
    "clusterstackvpcIGWB2AA0E16",
    "clusterstackvpcPrivateSubnet1DefaultRoute3ECBFEE2",
    "clusterstackvpcPrivateSubnet1RouteTableB17DE48F",
    "clusterstackvpcPrivateSubnet1RouteTableAssociationC6295C54",
    "clusterstackvpcPrivateSubnet1Subnet3C679C32",
    "clusterstackvpcPrivateSubnet2DefaultRoute2C3B9F2E",
    "clusterstackvpcPrivateSubnet2RouteTableF96BE109",
    "clusterstackvpcPrivateSubnet2RouteTableAssociationCC2207EF",
    "clusterstackvpcPrivateSubnet2SubnetA4138772",
    "clusterstackvpcPrivateSubnet3DefaultRouteC9D10118",
    "clusterstackvpcPrivateSubnet3RouteTable2AD77C21",
    "clusterstackvpcPrivateSubnet3RouteTableAssociation480A1533",
    "clusterstackvpcPrivateSubnet3SubnetEA4F4415",
    "clusterstackvpcPublicSubnet1DefaultRoute16FC4439",
    "clusterstackvpcPublicSubnet1EIP9A09AE3D",
    "clusterstackvpcPublicSubnet1NATGatewayDC932769",
    "clusterstackvpcPublicSubnet1RouteTableD3112B13",
    "clusterstackvpcPublicSubnet1RouteTableAssociation5EF738C2",
    "clusterstackvpcPublicSubnet1Subnet4B1CC129",
    "clusterstackvpcPublicSubnet2DefaultRoute5B58713A",
    "clusterstackvpcPublicSubnet2EIP65683885",
    "clusterstackvpcPublicSubnet2NATGateway0FFA7270",
    "clusterstackvpcPublicSubnet2RouteTable361B1861",
    "clusterstackvpcPublicSubnet2RouteTableAssociation266D7F35",
    "clusterstackvpcPublicSubnet2SubnetB75A7C8D",
    "clusterstackvpcPublicSubnet3DefaultRoute5B7E0364",
    "clusterstackvpcPublicSubnet3EIP1C047E66",
    "clusterstackvpcPublicSubnet3NATGateway6ADB8161",
    "clusterstackvpcPublicSubnet3RouteTable1A69B79A",
    "clusterstackvpcPublicSubnet3RouteTableAssociation1CE84EA3",
    "clusterstackvpcPublicSubnet3Subnet8F95B8A2",
    "clusterstackvpc22076887",
    "clusterstackvpcVPCGW7A23A202"
   ],
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack/ControlPlaneSecurityGroup/Resource"
   }
  },
  "clusterstackCreationRoleB548D758": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":iam::539080165904:root"
          ]
         ]
        }
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "DependsOn": [
    "clusterstackvpcIGWB2AA0E16",
    "clusterstackvpcPrivateSubnet1DefaultRoute3ECBFEE2",
    "clusterstackvpcPrivateSubnet1RouteTableB17DE48F",
    "clusterstackvpcPrivateSubnet1RouteTableAssociationC6295C54",
    "clusterstackvpcPrivateSubnet1Subnet3C679C32",
    "clusterstackvpcPrivateSubnet2DefaultRoute2C3B9F2E",
    "clusterstackvpcPrivateSubnet2RouteTableF96BE109",
    "clusterstackvpcPrivateSubnet2RouteTableAssociationCC2207EF",
    "clusterstackvpcPrivateSubnet2SubnetA4138772",
    "clusterstackvpcPrivateSubnet3DefaultRouteC9D10118",
    "clusterstackvpcPrivateSubnet3RouteTable2AD77C21",
    "clusterstackvpcPrivateSubnet3RouteTableAssociation480A1533",
    "clusterstackvpcPrivateSubnet3SubnetEA4F4415",
    "clusterstackvpcPublicSubnet1DefaultRoute16FC4439",
    "clusterstackvpcPublicSubnet1EIP9A09AE3D",
    "clusterstackvpcPublicSubnet1NATGatewayDC932769",
    "clusterstackvpcPublicSubnet1RouteTableD3112B13",
    "clusterstackvpcPublicSubnet1RouteTableAssociation5EF738C2",
    "clusterstackvpcPublicSubnet1Subnet4B1CC129",
    "clusterstackvpcPublicSubnet2DefaultRoute5B58713A",
    "clusterstackvpcPublicSubnet2EIP65683885",
    "clusterstackvpcPublicSubnet2NATGateway0FFA7270",
    "clusterstackvpcPublicSubnet2RouteTable361B1861",
    "clusterstackvpcPublicSubnet2RouteTableAssociation266D7F35",
    "clusterstackvpcPublicSubnet2SubnetB75A7C8D",
    "clusterstackvpcPublicSubnet3DefaultRoute5B7E0364",
    "clusterstackvpcPublicSubnet3EIP1C047E66",
    "clusterstackvpcPublicSubnet3NATGateway6ADB8161",
    "clusterstackvpcPublicSubnet3RouteTable1A69B79A",
    "clusterstackvpcPublicSubnet3RouteTableAssociation1CE84EA3",
    "clusterstackvpcPublicSubnet3Subnet8F95B8A2",
    "clusterstackvpc22076887",
    "clusterstackvpcVPCGW7A23A202"
   ],
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack/Resource/CreationRole/Resource"
   }
  },
  "clusterstackCreationRoleDefaultPolicy1F57DF56": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "iam:PassRole",
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "clusterstackRole73A18A5D",
         "Arn"
        ]
       }
      },
      {
       "Action": [
        "eks:CreateCluster",
        "eks:CreateFargateProfile",
        "eks:DeleteCluster",
        "eks:DescribeCluster",
        "eks:DescribeUpdate",
        "eks:TagResource",
        "eks:UntagResource",
        "eks:UpdateClusterConfig",
        "eks:UpdateClusterVersion"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":eks:ap-southeast-2:539080165904:cluster/cluster-stack"
          ]
         ]
        },
        {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":eks:ap-southeast-2:539080165904:cluster/cluster-stack/*"
          ]
         ]
        }
       ]
      },
      {
       "Action": [
        "eks:DeleteFargateProfile",
        "eks:DescribeFargateProfile"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":eks:ap-southeast-2:539080165904:fargateprofile/cluster-stack/*"
         ]
        ]
       }
      },
      {
       "Action": [
        "ec2:DescribeDhcpOptions",
        "ec2:DescribeInstances",
        "ec2:DescribeNetworkInterfaces",
        "ec2:DescribeRouteTables",
        "ec2:DescribeSecurityGroups",
        "ec2:DescribeSubnets",
        "ec2:DescribeVpcs",
        "iam:CreateServiceLinkedRole",
        "iam:GetRole",
        "iam:listAttachedRolePolicies"
       ],
       "Effect": "Allow",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "clusterstackCreationRoleDefaultPolicy1F57DF56",
    "Roles": [
     {
      "Ref": "clusterstackCreationRoleB548D758"
     }
    ]
   },
   "DependsOn": [
    "clusterstackvpcIGWB2AA0E16",
    "clusterstackvpcPrivateSubnet1DefaultRoute3ECBFEE2",
    "clusterstackvpcPrivateSubnet1RouteTableB17DE48F",
    "clusterstackvpcPrivateSubnet1RouteTableAssociationC6295C54",
    "clusterstackvpcPrivateSubnet1Subnet3C679C32",
    "clusterstackvpcPrivateSubnet2DefaultRoute2C3B9F2E",
    "clusterstackvpcPrivateSubnet2RouteTableF96BE109",
    "clusterstackvpcPrivateSubnet2RouteTableAssociationCC2207EF",
    "clusterstackvpcPrivateSubnet2SubnetA4138772",
    "clusterstackvpcPrivateSubnet3DefaultRouteC9D10118",
    "clusterstackvpcPrivateSubnet3RouteTable2AD77C21",
    "clusterstackvpcPrivateSubnet3RouteTableAssociation480A1533",
    "clusterstackvpcPrivateSubnet3SubnetEA4F4415",
    "clusterstackvpcPublicSubnet1DefaultRoute16FC4439",
    "clusterstackvpcPublicSubnet1EIP9A09AE3D",
    "clusterstackvpcPublicSubnet1NATGatewayDC932769",
    "clusterstackvpcPublicSubnet1RouteTableD3112B13",
    "clusterstackvpcPublicSubnet1RouteTableAssociation5EF738C2",
    "clusterstackvpcPublicSubnet1Subnet4B1CC129",
    "clusterstackvpcPublicSubnet2DefaultRoute5B58713A",
    "clusterstackvpcPublicSubnet2EIP65683885",
    "clusterstackvpcPublicSubnet2NATGateway0FFA7270",
    "clusterstackvpcPublicSubnet2RouteTable361B1861",
    "clusterstackvpcPublicSubnet2RouteTableAssociation266D7F35",
    "clusterstackvpcPublicSubnet2SubnetB75A7C8D",
    "clusterstackvpcPublicSubnet3DefaultRoute5B7E0364",
    "clusterstackvpcPublicSubnet3EIP1C047E66",
    "clusterstackvpcPublicSubnet3NATGateway6ADB8161",
    "clusterstackvpcPublicSubnet3RouteTable1A69B79A",
    "clusterstackvpcPublicSubnet3RouteTableAssociation1CE84EA3",
    "clusterstackvpcPublicSubnet3Subnet8F95B8A2",
    "clusterstackvpc22076887",
    "clusterstackvpcVPCGW7A23A202"
   ],
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack/Resource/CreationRole/DefaultPolicy/Resource"
   }
  },
  "clusterstackC7EB58CE": {
   "Type": "Custom::AWSCDK-EKS-Cluster",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
      "Outputs.clusterstackawscdkawseksClusterResourceProviderframeworkonEvent33D5290DArn"
     ]
    },
    "Config": {
     "name": "cluster-stack",
     "version": "1.21",
     "roleArn": {
      "Fn::GetAtt": [
       "clusterstackRole73A18A5D",
       "Arn"
      ]
     },
     "resourcesVpcConfig": {
      "subnetIds": [
       {
        "Ref": "clusterstackvpcPublicSubnet1Subnet4B1CC129"
       },
       {
        "Ref": "clusterstackvpcPublicSubnet2SubnetB75A7C8D"
       },
       {
        "Ref": "clusterstackvpcPublicSubnet3Subnet8F95B8A2"
       },
       {
        "Ref": "clusterstackvpcPrivateSubnet1Subnet3C679C32"
       },
       {
        "Ref": "clusterstackvpcPrivateSubnet2SubnetA4138772"
       },
       {
        "Ref": "clusterstackvpcPrivateSubnet3SubnetEA4F4415"
       }
      ],
      "securityGroupIds": [
       {
        "Fn::GetAtt": [
         "clusterstackControlPlaneSecurityGroup64B81F44",
         "GroupId"
        ]
       }
      ],
      "endpointPublicAccess": true,
      "endpointPrivateAccess": true
     }
    },
    "AssumeRoleArn": {
     "Fn::GetAtt": [
      "clusterstackCreationRoleB548D758",
      "Arn"
     ]
    },
    "AttributesRevision": 2
   },
   "DependsOn": [
    "clusterstackvpcIGWB2AA0E16",
    "clusterstackvpcPrivateSubnet1DefaultRoute3ECBFEE2",
    "clusterstackvpcPrivateSubnet1RouteTableB17DE48F",
    "clusterstackvpcPrivateSubnet1RouteTableAssociationC6295C54",
    "clusterstackvpcPrivateSubnet1Subnet3C679C32",
    "clusterstackvpcPrivateSubnet2DefaultRoute2C3B9F2E",
    "clusterstackvpcPrivateSubnet2RouteTableF96BE109",
    "clusterstackvpcPrivateSubnet2RouteTableAssociationCC2207EF",
    "clusterstackvpcPrivateSubnet2SubnetA4138772",
    "clusterstackvpcPrivateSubnet3DefaultRouteC9D10118",
    "clusterstackvpcPrivateSubnet3RouteTable2AD77C21",
    "clusterstackvpcPrivateSubnet3RouteTableAssociation480A1533",
    "clusterstackvpcPrivateSubnet3SubnetEA4F4415",
    "clusterstackvpcPublicSubnet1DefaultRoute16FC4439",
    "clusterstackvpcPublicSubnet1EIP9A09AE3D",
    "clusterstackvpcPublicSubnet1NATGatewayDC932769",
    "clusterstackvpcPublicSubnet1RouteTableD3112B13",
    "clusterstackvpcPublicSubnet1RouteTableAssociation5EF738C2",
    "clusterstackvpcPublicSubnet1Subnet4B1CC129",
    "clusterstackvpcPublicSubnet2DefaultRoute5B58713A",
    "clusterstackvpcPublicSubnet2EIP65683885",
    "clusterstackvpcPublicSubnet2NATGateway0FFA7270",
    "clusterstackvpcPublicSubnet2RouteTable361B1861",
    "clusterstackvpcPublicSubnet2RouteTableAssociation266D7F35",
    "clusterstackvpcPublicSubnet2SubnetB75A7C8D",
    "clusterstackvpcPublicSubnet3DefaultRoute5B7E0364",
    "clusterstackvpcPublicSubnet3EIP1C047E66",
    "clusterstackvpcPublicSubnet3NATGateway6ADB8161",
    "clusterstackvpcPublicSubnet3RouteTable1A69B79A",
    "clusterstackvpcPublicSubnet3RouteTableAssociation1CE84EA3",
    "clusterstackvpcPublicSubnet3Subnet8F95B8A2",
    "clusterstackvpc22076887",
    "clusterstackvpcVPCGW7A23A202",
    "clusterstackCreationRoleDefaultPolicy1F57DF56",
    "clusterstackCreationRoleB548D758"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack/Resource/Resource/Default"
   }
  },
  "clusterstackKubectlReadyBarrier5A7540AD": {
   "Type": "AWS::SSM::Parameter",
   "Properties": {
    "Type": "String",
    "Value": "aws:cdk:eks:kubectl-ready"
   },
   "DependsOn": [
    "clusterstackvpcIGWB2AA0E16",
    "clusterstackvpcPrivateSubnet1DefaultRoute3ECBFEE2",
    "clusterstackvpcPrivateSubnet1RouteTableB17DE48F",
    "clusterstackvpcPrivateSubnet1RouteTableAssociationC6295C54",
    "clusterstackvpcPrivateSubnet1Subnet3C679C32",
    "clusterstackvpcPrivateSubnet2DefaultRoute2C3B9F2E",
    "clusterstackvpcPrivateSubnet2RouteTableF96BE109",
    "clusterstackvpcPrivateSubnet2RouteTableAssociationCC2207EF",
    "clusterstackvpcPrivateSubnet2SubnetA4138772",
    "clusterstackvpcPrivateSubnet3DefaultRouteC9D10118",
    "clusterstackvpcPrivateSubnet3RouteTable2AD77C21",
    "clusterstackvpcPrivateSubnet3RouteTableAssociation480A1533",
    "clusterstackvpcPrivateSubnet3SubnetEA4F4415",
    "clusterstackvpcPublicSubnet1DefaultRoute16FC4439",
    "clusterstackvpcPublicSubnet1EIP9A09AE3D",
    "clusterstackvpcPublicSubnet1NATGatewayDC932769",
    "clusterstackvpcPublicSubnet1RouteTableD3112B13",
    "clusterstackvpcPublicSubnet1RouteTableAssociation5EF738C2",
    "clusterstackvpcPublicSubnet1Subnet4B1CC129",
    "clusterstackvpcPublicSubnet2DefaultRoute5B58713A",
    "clusterstackvpcPublicSubnet2EIP65683885",
    "clusterstackvpcPublicSubnet2NATGateway0FFA7270",
    "clusterstackvpcPublicSubnet2RouteTable361B1861",
    "clusterstackvpcPublicSubnet2RouteTableAssociation266D7F35",
    "clusterstackvpcPublicSubnet2SubnetB75A7C8D",
    "clusterstackvpcPublicSubnet3DefaultRoute5B7E0364",
    "clusterstackvpcPublicSubnet3EIP1C047E66",
    "clusterstackvpcPublicSubnet3NATGateway6ADB8161",
    "clusterstackvpcPublicSubnet3RouteTable1A69B79A",
    "clusterstackvpcPublicSubnet3RouteTableAssociation1CE84EA3",
    "clusterstackvpcPublicSubnet3Subnet8F95B8A2",
    "clusterstackvpc22076887",
    "clusterstackvpcVPCGW7A23A202",
    "clusterstackCreationRoleDefaultPolicy1F57DF56",
    "clusterstackCreationRoleB548D758",
    "clusterstackC7EB58CE"
   ],
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack/KubectlReadyBarrier"
   }
  },
  "clusterstackMastersRole20F68D4E": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "AWS": {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":iam::539080165904:root"
          ]
         ]
        }
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "DependsOn": [
    "clusterstackvpcIGWB2AA0E16",
    "clusterstackvpcPrivateSubnet1DefaultRoute3ECBFEE2",
    "clusterstackvpcPrivateSubnet1RouteTableB17DE48F",
    "clusterstackvpcPrivateSubnet1RouteTableAssociationC6295C54",
    "clusterstackvpcPrivateSubnet1Subnet3C679C32",
    "clusterstackvpcPrivateSubnet2DefaultRoute2C3B9F2E",
    "clusterstackvpcPrivateSubnet2RouteTableF96BE109",
    "clusterstackvpcPrivateSubnet2RouteTableAssociationCC2207EF",
    "clusterstackvpcPrivateSubnet2SubnetA4138772",
    "clusterstackvpcPrivateSubnet3DefaultRouteC9D10118",
    "clusterstackvpcPrivateSubnet3RouteTable2AD77C21",
    "clusterstackvpcPrivateSubnet3RouteTableAssociation480A1533",
    "clusterstackvpcPrivateSubnet3SubnetEA4F4415",
    "clusterstackvpcPublicSubnet1DefaultRoute16FC4439",
    "clusterstackvpcPublicSubnet1EIP9A09AE3D",
    "clusterstackvpcPublicSubnet1NATGatewayDC932769",
    "clusterstackvpcPublicSubnet1RouteTableD3112B13",
    "clusterstackvpcPublicSubnet1RouteTableAssociation5EF738C2",
    "clusterstackvpcPublicSubnet1Subnet4B1CC129",
    "clusterstackvpcPublicSubnet2DefaultRoute5B58713A",
    "clusterstackvpcPublicSubnet2EIP65683885",
    "clusterstackvpcPublicSubnet2NATGateway0FFA7270",
    "clusterstackvpcPublicSubnet2RouteTable361B1861",
    "clusterstackvpcPublicSubnet2RouteTableAssociation266D7F35",
    "clusterstackvpcPublicSubnet2SubnetB75A7C8D",
    "clusterstackvpcPublicSubnet3DefaultRoute5B7E0364",
    "clusterstackvpcPublicSubnet3EIP1C047E66",
    "clusterstackvpcPublicSubnet3NATGateway6ADB8161",
    "clusterstackvpcPublicSubnet3RouteTable1A69B79A",
    "clusterstackvpcPublicSubnet3RouteTableAssociation1CE84EA3",
    "clusterstackvpcPublicSubnet3Subnet8F95B8A2",
    "clusterstackvpc22076887",
    "clusterstackvpcVPCGW7A23A202"
   ],
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack/MastersRole/Resource"
   }
  },
  "clusterstackAwsAuthmanifest6F8E9120": {
   "Type": "Custom::AWSCDK-EKS-KubernetesResource",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B",
      "Outputs.clusterstackawscdkawseksKubectlProviderframeworkonEvent9AC3A640Arn"
     ]
    },
    "Manifest": {
     "Fn::Join": [
      "",
      [
       "[{\"apiVersion\":\"v1\",\"kind\":\"ConfigMap\",\"metadata\":{\"name\":\"aws-auth\",\"namespace\":\"kube-system\",\"labels\":{\"aws.cdk.eks/prune-c8ea7faf3b3c474ef5bc4aa5799ad69587ace3b544\":\"\"}},\"data\":{\"mapRoles\":\"[{\\\"rolearn\\\":\\\"",
       {
        "Fn::GetAtt": [
         "clusterstackMastersRole20F68D4E",
         "Arn"
        ]
       },
       "\\\",\\\"username\\\":\\\"",
       {
        "Fn::GetAtt": [
         "clusterstackMastersRole20F68D4E",
         "Arn"
        ]
       },
       "\\\",\\\"groups\\\":[\\\"system:masters\\\"]},{\\\"rolearn\\\":\\\"",
       {
        "Fn::GetAtt": [
         "clusterstackNodegroupclusterstackngngNodeGroupRole4F2925B8",
         "Arn"
        ]
       },
       "\\\",\\\"username\\\":\\\"system:node:{{EC2PrivateDNSName}}\\\",\\\"groups\\\":[\\\"system:bootstrappers\\\",\\\"system:nodes\\\"]}]\",\"mapUsers\":\"[]\",\"mapAccounts\":\"[]\"}}]"
      ]
     ]
    },
    "ClusterName": {
     "Ref": "clusterstackC7EB58CE"
    },
    "RoleArn": {
     "Fn::GetAtt": [
      "clusterstackCreationRoleB548D758",
      "Arn"
     ]
    },
    "PruneLabel": "aws.cdk.eks/prune-c8ea7faf3b3c474ef5bc4aa5799ad69587ace3b544",
    "Overwrite": true
   },
   "DependsOn": [
    "clusterstackvpcIGWB2AA0E16",
    "clusterstackvpcPrivateSubnet1DefaultRoute3ECBFEE2",
    "clusterstackvpcPrivateSubnet1RouteTableB17DE48F",
    "clusterstackvpcPrivateSubnet1RouteTableAssociationC6295C54",
    "clusterstackvpcPrivateSubnet1Subnet3C679C32",
    "clusterstackvpcPrivateSubnet2DefaultRoute2C3B9F2E",
    "clusterstackvpcPrivateSubnet2RouteTableF96BE109",
    "clusterstackvpcPrivateSubnet2RouteTableAssociationCC2207EF",
    "clusterstackvpcPrivateSubnet2SubnetA4138772",
    "clusterstackvpcPrivateSubnet3DefaultRouteC9D10118",
    "clusterstackvpcPrivateSubnet3RouteTable2AD77C21",
    "clusterstackvpcPrivateSubnet3RouteTableAssociation480A1533",
    "clusterstackvpcPrivateSubnet3SubnetEA4F4415",
    "clusterstackvpcPublicSubnet1DefaultRoute16FC4439",
    "clusterstackvpcPublicSubnet1EIP9A09AE3D",
    "clusterstackvpcPublicSubnet1NATGatewayDC932769",
    "clusterstackvpcPublicSubnet1RouteTableD3112B13",
    "clusterstackvpcPublicSubnet1RouteTableAssociation5EF738C2",
    "clusterstackvpcPublicSubnet1Subnet4B1CC129",
    "clusterstackvpcPublicSubnet2DefaultRoute5B58713A",
    "clusterstackvpcPublicSubnet2EIP65683885",
    "clusterstackvpcPublicSubnet2NATGateway0FFA7270",
    "clusterstackvpcPublicSubnet2RouteTable361B1861",
    "clusterstackvpcPublicSubnet2RouteTableAssociation266D7F35",
    "clusterstackvpcPublicSubnet2SubnetB75A7C8D",
    "clusterstackvpcPublicSubnet3DefaultRoute5B7E0364",
    "clusterstackvpcPublicSubnet3EIP1C047E66",
    "clusterstackvpcPublicSubnet3NATGateway6ADB8161",
    "clusterstackvpcPublicSubnet3RouteTable1A69B79A",
    "clusterstackvpcPublicSubnet3RouteTableAssociation1CE84EA3",
    "clusterstackvpcPublicSubnet3Subnet8F95B8A2",
    "clusterstackvpc22076887",
    "clusterstackvpcVPCGW7A23A202",
    "clusterstackKubectlReadyBarrier5A7540AD"
   ],
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack/AwsAuth/manifest/Resource/Default"
   }
  },
  "clusterstackNodegroupclusterstackngngNodeGroupRole4F2925B8": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKSWorkerNodePolicy"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEKS_CNI_Policy"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "clusterstackvpcIGWB2AA0E16",
    "clusterstackvpcPrivateSubnet1DefaultRoute3ECBFEE2",
    "clusterstackvpcPrivateSubnet1RouteTableB17DE48F",
    "clusterstackvpcPrivateSubnet1RouteTableAssociationC6295C54",
    "clusterstackvpcPrivateSubnet1Subnet3C679C32",
    "clusterstackvpcPrivateSubnet2DefaultRoute2C3B9F2E",
    "clusterstackvpcPrivateSubnet2RouteTableF96BE109",
    "clusterstackvpcPrivateSubnet2RouteTableAssociationCC2207EF",
    "clusterstackvpcPrivateSubnet2SubnetA4138772",
    "clusterstackvpcPrivateSubnet3DefaultRouteC9D10118",
    "clusterstackvpcPrivateSubnet3RouteTable2AD77C21",
    "clusterstackvpcPrivateSubnet3RouteTableAssociation480A1533",
    "clusterstackvpcPrivateSubnet3SubnetEA4F4415",
    "clusterstackvpcPublicSubnet1DefaultRoute16FC4439",
    "clusterstackvpcPublicSubnet1EIP9A09AE3D",
    "clusterstackvpcPublicSubnet1NATGatewayDC932769",
    "clusterstackvpcPublicSubnet1RouteTableD3112B13",
    "clusterstackvpcPublicSubnet1RouteTableAssociation5EF738C2",
    "clusterstackvpcPublicSubnet1Subnet4B1CC129",
    "clusterstackvpcPublicSubnet2DefaultRoute5B58713A",
    "clusterstackvpcPublicSubnet2EIP65683885",
    "clusterstackvpcPublicSubnet2NATGateway0FFA7270",
    "clusterstackvpcPublicSubnet2RouteTable361B1861",
    "clusterstackvpcPublicSubnet2RouteTableAssociation266D7F35",
    "clusterstackvpcPublicSubnet2SubnetB75A7C8D",
    "clusterstackvpcPublicSubnet3DefaultRoute5B7E0364",
    "clusterstackvpcPublicSubnet3EIP1C047E66",
    "clusterstackvpcPublicSubnet3NATGateway6ADB8161",
    "clusterstackvpcPublicSubnet3RouteTable1A69B79A",
    "clusterstackvpcPublicSubnet3RouteTableAssociation1CE84EA3",
    "clusterstackvpcPublicSubnet3Subnet8F95B8A2",
    "clusterstackvpc22076887",
    "clusterstackvpcVPCGW7A23A202"
   ],
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack/Nodegroupcluster-stack-ng-ng/NodeGroupRole/Resource"
   }
  },
  "clusterstackNodegroupclusterstackngng57A4174C": {
   "Type": "AWS::EKS::Nodegroup",
   "Properties": {
    "ClusterName": {
     "Ref": "clusterstackC7EB58CE"
    },
    "NodeRole": {
     "Fn::GetAtt": [
      "clusterstackNodegroupclusterstackngngNodeGroupRole4F2925B8",
      "Arn"
     ]
    },
    "Subnets": [
     {
      "Ref": "clusterstackvpcPrivateSubnet1Subnet3C679C32"
     },
     {
      "Ref": "clusterstackvpcPrivateSubnet2SubnetA4138772"
     },
     {
      "Ref": "clusterstackvpcPrivateSubnet3SubnetEA4F4415"
     }
    ],
    "AmiType": "AL2_x86_64",
    "ForceUpdateEnabled": true,
    "InstanceTypes": [
     "m5.large"
    ],
    "NodegroupName": "cluster-stack-ng",
    "ScalingConfig": {
     "DesiredSize": 1,
     "MaxSize": 3,
     "MinSize": 1
    }
   },
   "DependsOn": [
    "clusterstackvpcIGWB2AA0E16",
    "clusterstackvpcPrivateSubnet1DefaultRoute3ECBFEE2",
    "clusterstackvpcPrivateSubnet1RouteTableB17DE48F",
    "clusterstackvpcPrivateSubnet1RouteTableAssociationC6295C54",
    "clusterstackvpcPrivateSubnet1Subnet3C679C32",
    "clusterstackvpcPrivateSubnet2DefaultRoute2C3B9F2E",
    "clusterstackvpcPrivateSubnet2RouteTableF96BE109",
    "clusterstackvpcPrivateSubnet2RouteTableAssociationCC2207EF",
    "clusterstackvpcPrivateSubnet2SubnetA4138772",
    "clusterstackvpcPrivateSubnet3DefaultRouteC9D10118",
    "clusterstackvpcPrivateSubnet3RouteTable2AD77C21",
    "clusterstackvpcPrivateSubnet3RouteTableAssociation480A1533",
    "clusterstackvpcPrivateSubnet3SubnetEA4F4415",
    "clusterstackvpcPublicSubnet1DefaultRoute16FC4439",
    "clusterstackvpcPublicSubnet1EIP9A09AE3D",
    "clusterstackvpcPublicSubnet1NATGatewayDC932769",
    "clusterstackvpcPublicSubnet1RouteTableD3112B13",
    "clusterstackvpcPublicSubnet1RouteTableAssociation5EF738C2",
    "clusterstackvpcPublicSubnet1Subnet4B1CC129",
    "clusterstackvpcPublicSubnet2DefaultRoute5B58713A",
    "clusterstackvpcPublicSubnet2EIP65683885",
    "clusterstackvpcPublicSubnet2NATGateway0FFA7270",
    "clusterstackvpcPublicSubnet2RouteTable361B1861",
    "clusterstackvpcPublicSubnet2RouteTableAssociation266D7F35",
    "clusterstackvpcPublicSubnet2SubnetB75A7C8D",
    "clusterstackvpcPublicSubnet3DefaultRoute5B7E0364",
    "clusterstackvpcPublicSubnet3EIP1C047E66",
    "clusterstackvpcPublicSubnet3NATGateway6ADB8161",
    "clusterstackvpcPublicSubnet3RouteTable1A69B79A",
    "clusterstackvpcPublicSubnet3RouteTableAssociation1CE84EA3",
    "clusterstackvpcPublicSubnet3Subnet8F95B8A2",
    "clusterstackvpc22076887",
    "clusterstackvpcVPCGW7A23A202"
   ],
   "Metadata": {
    "aws:cdk:path": "cluster-stack/cluster-stack/Nodegroupcluster-stack-ng-ng/Resource"
   }
  },
  "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454": {
   "Type": "AWS::CloudFormation::Stack",
   "Properties": {
    "TemplateURL": {
     "Fn::Join": [
      "",
      [
       "https://s3.ap-southeast-2.",
       {
        "Ref": "AWS::URLSuffix"
       },
       "/cdk-hnb659fds-assets-539080165904-ap-southeast-2/404ebd5711f1164a80f2cfb8a5fc82fff5b020ed1633f83572f38a26b94b868f.json"
      ]
     ]
    },
    "Parameters": {
     "referencetoclusterstackCreationRoleFA2112C5Arn": {
      "Fn::GetAtt": [
       "clusterstackCreationRoleB548D758",
       "Arn"
      ]
     }
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "cluster-stack/@aws-cdk--aws-eks.ClusterResourceProvider.NestedStack/@aws-cdk--aws-eks.ClusterResourceProvider.NestedStackResource",
    "aws:asset:path": "clusterstackawscdkawseksClusterResourceProviderFD1B24AB.nested.template.json",
    "aws:asset:property": "TemplateURL"
   }
  },
  "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B": {
   "Type": "AWS::CloudFormation::Stack",
   "Properties": {
    "TemplateURL": {
     "Fn::Join": [
      "",
      [
       "https://s3.ap-southeast-2.",
       {
        "Ref": "AWS::URLSuffix"
       },
       "/cdk-hnb659fds-assets-539080165904-ap-southeast-2/01cb80f82c9786aac18343b2f2a31191dff4692837f48f7b7aa0b1f88bf8a616.json"
      ]
     ]
    },
    "Parameters": {
     "referencetoclusterstack0C4F0AA2Arn": {
      "Fn::GetAtt": [
       "clusterstackC7EB58CE",
       "Arn"
      ]
     },
     "referencetoclusterstackCreationRoleFA2112C5Arn": {
      "Fn::GetAtt": [
       "clusterstackCreationRoleB548D758",
       "Arn"
      ]
     },
     "referencetoclusterstackclusterstackvpcPrivateSubnet1Subnet511CD5ADRef": {
      "Ref": "clusterstackvpcPrivateSubnet1Subnet3C679C32"
     },
     "referencetoclusterstackclusterstackvpcPrivateSubnet2Subnet0AB393F6Ref": {
      "Ref": "clusterstackvpcPrivateSubnet2SubnetA4138772"
     },
     "referencetoclusterstackclusterstackvpcPrivateSubnet3SubnetEE0D66A1Ref": {
      "Ref": "clusterstackvpcPrivateSubnet3SubnetEA4F4415"
     },
     "referencetoclusterstack0C4F0AA2ClusterSecurityGroupId": {
      "Fn::GetAtt": [
       "clusterstackC7EB58CE",
       "ClusterSecurityGroupId"
      ]
     }
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "cluster-stack/@aws-cdk--aws-eks.KubectlProvider.NestedStack/@aws-cdk--aws-eks.KubectlProvider.NestedStackResource",
    "aws:asset:path": "clusterstackawscdkawseksKubectlProvider73ABF935.nested.template.json",
    "aws:asset:property": "TemplateURL"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/01Q0WrDMAz8lr4r3tpB9xzCKGWsDcno63BcdXWT2MGWGkrIv89J1qZg0N0hn05aibd3sVzI1kfqWEaVLkSXk1QlBOmnQ7US3aFRkJzMIU0g5aLSKufCIA3ajDLLhN+yqHDWZy323iotSVvzaB7AxzYdyk7SRhK28gap09cAZ+OtIXQB3xumJP8sppD1XKMhyFGx03TbOMvNmOFZ6AFLL7qkYh/sIG59zHSGTy5Gc/Rf0ugTeoKdPeLv3eNBetCyFl1mp/3GmtpwizHQhPoeMvSWnQo9YY6tZxq+POE9U8PTAYdb92DCHHHxL9flWoT3urh4rSPHhnSNIpvqH4eq3i+sAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "cluster-stack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "clusterstackClusterName54186A84": {
   "Value": {
    "Ref": "clusterstackC7EB58CE"
   }
  },
  "clusterstackConfigCommand3CE2A6DC": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "aws eks update-kubeconfig --name ",
      {
       "Ref": "clusterstackC7EB58CE"
      },
      " --region ap-southeast-2 --role-arn ",
      {
       "Fn::GetAtt": [
        "clusterstackMastersRole20F68D4E",
        "Arn"
       ]
      }
     ]
    ]
   }
  },
  "clusterstackGetTokenCommand067B76F9": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "aws eks get-token --cluster-name ",
      {
       "Ref": "clusterstackC7EB58CE"
      },
      " --region ap-southeast-2 --role-arn ",
      {
       "Fn::GetAtt": [
        "clusterstackMastersRole20F68D4E",
        "Arn"
       ]
      }
     ]
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
